Documentacao/Confluence/Claro Flex/iptables
# Generated by iptables-save v1.4.21 on Fri Dec  8 19:36:29 2017
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [232:13920]
-A PREROUTING -s 200.169.112.22/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.179/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.112.22/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.179/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.114.200/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.179/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.32.142:22
-A PREROUTING -s 200.169.113.180/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.181/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.180/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.181/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.114.200/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.182/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.183/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.184/32 -d 192.168.32.100/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.184/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.183/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A PREROUTING -s 200.169.113.182/32 -d 54.233.113.9/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.32.188:443
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.112.22/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.179/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.114.200/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.180/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.181/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.182/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.183/32 -j SNAT --to-source 54.233.113.9
-A POSTROUTING -s 192.168.32.0/22 -d 200.169.113.184/32 -j SNAT --to-source 54.233.113.9
COMMIT
# Completed on Fri Dec  8 19:36:29 2017
# Generated by iptables-save v1.4.21 on Fri Dec  8 19:36:29 2017
*filter
:INPUT ACCEPT [308272:29487181]
:FORWARD ACCEPT [323631:14494603]
:OUTPUT ACCEPT [274158:66556507]
-A FORWARD -d 200.169.113.180/32 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -d 200.169.113.181/32 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -s 200.169.113.180/32 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -s 200.169.113.181/32 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 128
COMMIT
# Completed on Fri Dec  8 19:36:29 2017
